apps/kube-system/cilium/hubble/hubble-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "hubble.mgmt.sholdee.net"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-https
  namespace: kube-system
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: hubble-https
  hostnames:
  - "hubble.mgmt.sholdee.net"
  rules:
  - backendRefs:
    - name: hubble-ui 
      namespace: kube-system
      port: 80
